[tool.poetry]
name = "income-flow"
version = "0.1.0"
description = ""
authors = ["sieginglion <sieginglion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.14.1"
dash-bootstrap-components = "^1.5.0"
general-cache = "^0.1.1"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
